fix floating-action-btn z-index issue

--- a/src/stylesheets/_buttons.scss
+++ b/src/stylesheets/_buttons.scss
@@ -221,7 +221,6 @@ button {
 
         li {
             position: absolute;
-            z-index: 9;
 
             .btn--circle {
                 width: 4.6rem;
